--- a/index.html
+++ b/index.html
@@ -70,9 +70,129 @@
       </div>
     </div>
 
-    
+      <div class="Program">
+        <div class="program-header">
+          <h2>OUR PROGRAMS</h2>
+          <p>TRAIN IN A NEW WAY. TRAIN LIKE A CHAMPION</p>
+        </div>
+        <div class="programs-container">
+          <div class="program_card">
+            <img src="images/a15dc244f122b9fb5cffb0d55b13e46b5659d755.jpg" alt="CrossFit">
+            <h1>CROSSFIT ></h1>
+            <p>CrossFit workouts are challenging but worth the effort. And when you pair the unparalleled fitness stimulus of these workouts with sound nutrition, you get a program that is more transformative than anything you'll find in any other gym anywhere</p>
+          </div>
+          <div class="program_card">
+            <img src="images/962a4111d92a4e37d24b5617aedc0480a2417536.png" alt="yoga">
+            <h1>YOGA ></h1>
+            <p>Deepen your practise through traditional yoga flows with us</p>
+          </div>
+          <div class="program_card">
+            <img src="images/ab57879e3315fc575ce47e14c01e69e4f60f2820.png" alt="trx fitness">
+            <h1>TRX FITNESS ></h1>
+            <p>Our TRX Suspension Trainer™ strap is the only fitness method that challenges you with your own bodyweight to get you stronger, faster.</p>
+          </div>
+        <div class="program_card">
+          <img src="images/17f3b639de50ddfd55d9f5cdd6213ef6767cdcd2.jpg" alt="ZUMBRA">
+          <h1>ZUMBRA ></h1>
+          <p>Our Zumbda strap is the only fitness method that challenges you with your own bodyweight to get you stronger, faster.</p>
+        </div>
+      </div>
+      <div class="Membership">
+        <h2 class="membership-title">MEMBERSHIP</h2>
+        <div class="membership-container">
+          <div class="membership-card">
+            <h3>Silver</h3>
+            <ul class="membership-features">
+              <li class="included">✓ Unlimited club access</li>
+              <li class="excluded">✗ Group attendance</li>
+              <li class="included">✓ Gym visits</li>
+              <li class="included">✓ Visits to the bath complex</li>
+              <li class="included">✓ Gym, fight club</li>
+            </ul>
+            <div class="membership-price">
+              <span class="price">$70</span>
+              <span style="color: #F57325;" class="period">/month</span>
+            </div>
+            <button class="membership-btn">Choose</button>
+          </div>
+
+          <div class="membership-card featured">
+            <h3>Silver</h3>
+            <ul class="membership-features">
+              <li class="included">✓ Unlimited club access</li>
+              <li class="included">✓ Group attendance</li>
+              <li class="included">✓ Gym visits</li>
+              <li class="included">✓ Visits to the bath complex</li>
+              <li class="included">✓ Gym, fight club</li>
+            </ul>
+            <div class="membership-price">
+              <span class="price">$150</span>
+              <span class="period">/month</span>
+            </div>
+            <button class="membership-btn featured-btn">Choose</button>
+          </div>
+
+          <div class="membership-card">
+            <h3>Platinum</h3>
+            <ul class="membership-features">
+              <li class="included">✓ Unlimited club access</li>
+              <li class="included">✓ Group attendance</li>
+              <li class="excluded">✗ Gym visits</li>
+              <li class="excluded">✗ Visits to the bath complex</li>
+              <li class="excluded">✗ Gym, fight club</li>
+            </ul>
+            <div class="membership-price">
+              <span class="price">$90</span>
+              <span style="color: #F57325;" class="period">/month</span>
+            </div>
+            <button class="membership-btn">Choose</button>
+          </div>
+        </div>
+      </div>
   </main>
-  
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-column">
+        <h3 class="footer-logo">FIT<span>Club</span></h3>
+        <p class="footer-description">N1 Fitness Club in the town to help you shape your ideal body</p>
+        <div class="footer-social">
+          <a href="#" class="social-icon">f</a>
+          <a href="#" class="social-icon">𝕏</a>
+          <a href="#" class="social-icon">📷</a>
+          <a href="#" class="social-icon">✉</a>
+        </div>
+      </div>
+
+      <div class="footer-column">
+        <h4>Healthy Living</h4>
+        <ul>
+          <li><a href="#">Fitness</a></li>
+          <li><a href="#">Health</a></li>
+          <li><a href="#">Nutrition</a></li>
+          <li><a href="#">Health Recipes</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h4>Service</h4>
+        <ul>
+          <li><a href="#">Yoga Class</a></li>
+          <li><a href="#">Body Building</a></li>
+          <li><a href="#">Strong Muscle</a></li>
+          <li><a href="#">Sixpack Body</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h4>Programs</h4>
+        <ul>
+          <li><a href="#">Workout Video</a></li>
+          <li><a href="#">Custom Workol</a></li>
+          <li><a href="#">Experts</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
   
 </body>
 </html>
