--- a/about.html
+++ b/about.html
@@ -64,13 +64,13 @@
         <h3 class="footer-logo">FIT<span>Club</span></h3>
         <p class="footer-description">N1 Fitness Club in the town to help you shape your ideal body</p>
         <div class="footer-social">
-          <a href="#" class="social-icon">f</a>
-          <a href="#" class="social-icon">𝕏</a>
-          <a href="#" class="social-icon">📷</a>
-          <a href="#" class="social-icon">✉</a>
+          <a href="#" class="social-icon"><img src="images/ic_baseline-facebook.png" alt="facebook"></a>
+          <a href="#" class="social-icon"><img src="images/Vector.png" alt="twitter"></a>
+          <a href="#" class="social-icon"><img src="images/Vector (1).png" alt="instagram"></a>
+          <a href="#" class="social-icon"><img src="images/Vector (2).png" alt="message"></a>
         </div>
       </div>
-
+             <div class="footer-content-left">
       <div class="footer-column">
         <h4>Healthy Living</h4>
         <ul>
@@ -97,7 +97,7 @@
           <li><a href="#">Workout Video</a></li>
           <li><a href="#">Custom Workol</a></li>
           <li><a href="#">Experts</a></li>
-        </ul>
+        </ul></div>
       </div>
     </div>
   </footer>
