--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
         <div class="card">
         <img src="images/b5c903f4ea792d76806b3ff6cc4ad54a38960fe4.png" alt="Karolina Garcia" />
         <p class="specialty">TRX Trainer</p>
-        <h3 class="name">Karolina Garcia</h3>
+        <h3 class="name"><span style="color: #F57325;">Karolina</span> Garcia</h3>
         <button>Read More</button>
       </div>
 
       <div class="card">
         <img src="images/cc9202c591c0d642acb8808773a1cfef5cb1fcc4.png" alt="Victor Freitas" />
         <p class="specialty">Crossfit Trainer</p>
-        <h3 class="name">Victor Freitas</h3>
+        <h3 class="name"><span style="color: #F57325;">Victor</span> Freitas</h3>
         <button>Read More</button>
       </div>
 
       <div class="card">
         <img src="images/e187383be8adcbeeebb89d7a4bfb871dd01c7909.jpg" alt="Joseph Wayne" />
         <p class="specialty">Personal Trainer</p>
-        <h3 class="name">Joseph Wayne</h3>
+        <h3 class="name"><span style="color: #F57325;">Joseph</span> Wayne</h3>
         <button>Read More</button>
       </div>
     </div>
@@ -78,22 +78,22 @@
         <div class="programs-container">
           <div class="program_card">
             <img src="images/a15dc244f122b9fb5cffb0d55b13e46b5659d755.jpg" alt="CrossFit">
-            <h1>CROSSFIT ></h1>
+            <h1>CROSSFIT <span style="color: blue;">></span></h1>
             <p>CrossFit workouts are challenging but worth the effort. And when you pair the unparalleled fitness stimulus of these workouts with sound nutrition, you get a program that is more transformative than anything you'll find in any other gym anywhere</p>
           </div>
           <div class="program_card">
             <img src="images/962a4111d92a4e37d24b5617aedc0480a2417536.png" alt="yoga">
-            <h1>YOGA ></h1>
+            <h1>YOGA <span style="color: blue;">></span></h1>
             <p>Deepen your practise through traditional yoga flows with us</p>
           </div>
           <div class="program_card">
             <img src="images/ab57879e3315fc575ce47e14c01e69e4f60f2820.png" alt="trx fitness">
-            <h1>TRX FITNESS ></h1>
+            <h1>TRX FITNESS <span style="color: blue;">></span></h1>
             <p>Our TRX Suspension Trainer™ strap is the only fitness method that challenges you with your own bodyweight to get you stronger, faster.</p>
           </div>
         <div class="program_card">
           <img src="images/17f3b639de50ddfd55d9f5cdd6213ef6767cdcd2.jpg" alt="ZUMBRA">
-          <h1>ZUMBRA ></h1>
+          <h1>ZUMBRA <span style="color: blue;">></span></h1>
           <p>Our Zumbda strap is the only fitness method that challenges you with your own bodyweight to get you stronger, faster.</p>
         </div>
       </div>
@@ -156,13 +156,13 @@
         <h3 class="footer-logo">FIT<span>Club</span></h3>
         <p class="footer-description">N1 Fitness Club in the town to help you shape your ideal body</p>
         <div class="footer-social">
-          <a href="#" class="social-icon">f</a>
-          <a href="#" class="social-icon">𝕏</a>
-          <a href="#" class="social-icon">📷</a>
-          <a href="#" class="social-icon">✉</a>
+          <a href="#" class="social-icon"><img src="images/ic_baseline-facebook.png" alt="facebook"></a>
+          <a href="#" class="social-icon"><img src="images/Vector.png" alt="twitter"></a>
+          <a href="#" class="social-icon"><img src="images/Vector (1).png" alt="instagram"></a>
+          <a href="#" class="social-icon"><img src="images/Vector (2).png" alt="message"></a>
         </div>
       </div>
-
+             <div class="footer-content-left">
       <div class="footer-column">
         <h4>Healthy Living</h4>
         <ul>
@@ -189,7 +189,7 @@
           <li><a href="#">Workout Video</a></li>
           <li><a href="#">Custom Workol</a></li>
           <li><a href="#">Experts</a></li>
-        </ul>
+        </ul></div>
       </div>
     </div>
   </footer>
